# lab1_oop

./: CMakeLists.txt  README.md  lab1.cpp  lab1main.cpp  main  main-debug  main.cpp  replit.nix
.ccls-cache/@@home@runner@lab1oop/: @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@array.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@backward@binders.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@alloc_traits.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@allocator.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_ios.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_ios.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_string.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_string.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@char_traits.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@charconv.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@codecvt.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@concept_check.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@cpp_type_traits.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@invoke.h.blob  (+199 more)
(+8 files in other folders)
